feat: update h1 for calm variant

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>✨ Affirmation Generator ✨ — Version 1.1 (Calm + Energize)</h1>
+<h1>✨ Affirmation Generator ✨ — Calm & Centered</h1>
 
     <!-- Categories -->
     <div class="category-list" id="categoryButtons"></div>
